# DistributedEdupt

./: .gitignore
DistributedEdupt/: .editorconfig  DistributedEdupt.sln
DistributedEdupt/Client/: Client.cpp  Client.h  Client.vcxproj  Client.vcxproj.filters  Client_Main.cpp  GE2A33_ClientRun.bat  Main.cpp
DistributedEdupt/Common/: SceneLoader.cpp  Tile.h
DistributedEdupt/DistributedEduptSV/: Log.txt
DistributedEdupt/Server/: LocalClient.cpp  LocalClient.h  Main.cpp  Server.cpp  Server.h  Server.vcxproj  Server.vcxproj.filters  SubProcess.cpp  SubProcess.h  Viewer.cpp
DistributedEdupt/Viewer/: Log.txt  Main.cpp  Viewer.vcxproj
DistributedEdupt/lib/edupt-master/: material.h  ppm.h  radiance.h  render.h  render_data.h  vec.h
lib/edupt-master/: CMakeLists.txt  constant.h  intersection.h  main.cpp  ppm.h  radiance.h  random.h  ray.h  render.h  scene.h  sphere.h  vec.h
